--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "glamor": "^2.20.25",
     "grappling-hook": "^3.0.0",
     "i": "^0.3.5",
+    "jade": "^1.11.0",
     "keystone-storage-namefunctions": "^1.1.1",
     "keystone-tinymce": "^0.1.0",
     "keystone-utils": "^0.4.0",
@@ -63,6 +64,7 @@
     "mongoose": "^4.13.14",
     "morgan": "^1.9.0",
     "multer": "^1.3.1",
+    "node-sass-middleware": "^0.11.0",
     "numeral": "^2.0.6",
     "object-assign": "^4.1.1",
     "qs": "^6.5.2",
